@@ -1,5 +1,8 @@
 2004-04-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
+	* lib/zip_name_locate.c (zip_name_locate): honour
+	ZIP_FL_UNCHANGED, handle `\' for ZIP_FL_NODIR.
+
 	* lib/zip_stat_index.c (zip_stat_index): return ZERR_INVAL if
 	ZIP_FL_UNCHANGED is specified and file was added.  Honour
 	ZIP_FL_UNCHANGED for name.  If file was changed and
